css/base.scss
---
---

@import 'mixins';
@import 'colors';

html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p, blockquote, pre, form, fieldset, table, th, td {
  margin: 0;
  padding: 0;
}

html, body {
  @include box-sizing(border-box);
  height: auto;
  font-size: 18px;
}

*, *:before, *:after {
  @include box-sizing(inherit);
  text-shadow: none;
}

img {
  border: none;
}

a {
  color: $blue;
  text-decoration: none;
  @include transition(all, ease, 300ms);

  &:hover {
    color: $orange;
  }
}

body {
  font-family: Ubuntu, Lato, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #505050;
  line-height: 22px;
  background: url(../img/pcb-subtle-green.png) repeat;
}

h1, h2, h3, h4, h5, .ui.header {
  font-family: Ubuntu, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

p {
  margin: 1em 0;
}

[data-tooltip]:after {
  font-size: 0.8rem;
}

.no-bch {
  transition: 1s all ease-in-out;
}

.filter-no-results {
  display: none;
}

.coin-wrap {
  display: inline-block;

  img {
    height: 40px;
    width: auto;
  }
}

.fab {
  position: fixed;
  bottom: 1rem;
  right: 0.5rem;
  z-index: 10000;

  .ui.button {
    position: relative;
    background: $orange !important;
    box-shadow: 2px 5px 20px rgba(0,0,0,0.4);

    i {
      position: absolute;
      top: 7px;
      left: 7px;
      font-size: 32px;
      font-weight: bold;
      color: #fff;
    }

    &:nth-child(2), &:nth-child(3) {
      background-color: $blue-dark !important;
      position: absolute;
      top: -64px;
      left: 0;

      i {
        font-size: 20px;
        font-weight: normal;
        left: 14px;
      }
    }

    &:nth-child(2) {
      display: none;
    }

    &:nth-child(3) {
      display: none;
//      background-color: $green-light !important;
      //top: -128px;
      //left: 0;

      i {
//        color: $green-dark;
        font-size: 26px;
        top: 9px;
        left: 11px;
      }
    }
  }
}

.attention {
  animation: 420ms attention;
  animation-iteration-count: 3;
}

.website-table .left,
.website-table .right {
  display: inline-block;
  height: 100%;
  line-height: 2em;
}

.website-table a.name {
  font-size: 22px;
  font-weight: 300;
  color: $blue-dark;

  &:hover {
    color: $orange-dark;
  }
}

.website-table .left {
  width: 60%;


  p {
    margin-top: 10px;
  }
}

.website-table .right {
  float: right;
  padding-left: 30px;
  width: 40%;
}

.ui.inverted.teal.menu {
  border-radius: 0;
}
/* ... */

